# micro-dataframes

./: .gitignore  .pre-commit-config.yaml  README.md  claude-writeup.md  evaluation.md  pyproject.toml
benchmarks/: codeshare_bench.py
docs/: embeddings.md  tour.md
examples/: codeshare_arrow.py  codeshare_codegen.py  codeshare_columnar.py  codeshare_deep.py  codeshare_deep_pushdown.py  codeshare_eager.py  codeshare_fluent_pushdown.py  codeshare_functional.py  codeshare_functional_extension.py  codeshare_lazy_pull.py  codeshare_lazy_push.py  codeshare_monkeypatch.py  codeshare_pipe_rows.py  codeshare_query_forward.py  codeshare_query_lift.py  codeshare_vectorized.py  loader.py
src/micro_dataframes/: arrow.py  codegen.py  columnar.py  deep.py  deep_pushdown.py  eager.py  fluent_pushdown.py  functional.py  lazy_pull.py  lazy_push.py  pipe_rows.py  query_forward.py  query_lift.py  vectorized.py
tests/: test_codeshare.py  test_error_staging.py  test_join_edges.py
