[project]
name = "micro-dataframes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff.lint]
# Ruff's default is just E4/E7/E9 + F. Opt into a broader, still-sane set.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
strict = true
files = ["src", "tests", "examples"]
